unit test of component with service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
-  <a href="/simple">Simple</a>
-  <a href="/complex">Complex</a>
+  <a href="/simple">Simple</a>&nbsp;
+  <a href="/complex">Complex</a>&nbsp;
+  <a href="/component-with-service">Component with service</a>
 </div>
 <router-outlet></router-outlet>
