component with store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <a href="/simple">Simple</a>&nbsp;
   <a href="/complex">Complex</a>&nbsp;
   <a href="/component-with-service">Component with service</a>
+  <a href="/component-with-state">Component with state</a>
 </div>
 <router-outlet></router-outlet>
