--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <a href="/complex">Complex</a>&nbsp;
   <a href="/component-with-service">Component with service</a>
   <a href="/component-with-state">Component with state</a>
+  <a href="/component-with-effects">Component with effects</a>
 </div>
 <router-outlet></router-outlet>
